# fast-glob

./: .typos.toml  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: benchmark.yml  ci.yml  codspeed.yml  release.yml
benches/: bench.rs
src/: lib.rs
tests/: test.rs
