[package]
name = "fast-glob"
version = "0.4.5"
edition = "2021"
license = "MIT"

authors = ["shulaoda <laipichan@qq.com>", "fast-glob contributors"]
keywords = ["glob", "pattern", "walkdir"]
categories = ["filesystem"]
documentation = "https://docs.rs/fast-glob"
description = "A high-performance glob matching crate for Rust"
repository = "https://github.com/oxc-project/fast-glob.git"
include = ["/src"]

[[test]]
name = "test"
path = "tests/test.rs"

[[bench]]
name = "bench"
harness = false

[dependencies]
arrayvec = "0.7.6"

[dev-dependencies]
glob = "0.3.2"
globset = "0.4.15"
glob-match = "0.2.1"
criterion2 = { version = "3.0.0", default-features = false }

[features]
default = []
codspeed = ["criterion2/codspeed"]
